[tool.poetry]
name = "matte"
version = "1.0.4"
description = ""
authors = ["Maksim Burmistrov <drummerbmd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiogram = "^3.3.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
feedparser = "^6.0.11"
psycopg2-binary = "^2.9.9"
openai = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
